--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -211,6 +211,9 @@ body {
     .card-icon {
       &.push-down{
         margin-bottom:50px;
+        img {
+          transform:scale(1.25);
+        }
       }
       img {
         margin: 0 auto 1.5rem;
@@ -656,7 +659,7 @@ section.home-card {
     box-shadow: 0 3px 26px #00000010;
     border-radius: 10px;
     margin: 0 0 1.5rem 0;
-    min-height: 20rem;
+    min-height: 21rem;
     padding: 2.25rem 2rem 1.875rem;
     position: relative;
     /*width: 17.75rem !important;*/
@@ -1081,7 +1084,7 @@ section.customer {
     max-width: 1260px;
     margin: 0 auto;
   }
-  
+
   img {
     display: none;
     margin: 0 auto;
