TIghten up vertical height in workflow menu

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -749,7 +749,7 @@ section.dctsdk-work-flow {
     width:290px;
     @media screen and (min-width: 768px) {
       // margin-bottom: 0; /* lr */
-      margin-bottom: 1rem;
+      margin-bottom: 0.35rem;
     }
   }
 
@@ -1038,7 +1038,7 @@ section.dctsdk-work-flow {
       background: #FFFFFF;
       box-shadow: 0 3px 16px #46303029;
       border-radius: 6px;
-      margin-bottom: 16px;
+      margin-bottom: 0;
       color: #2C2C2C;
       font-weight: bold;
       cursor: pointer;
