fixed issue# 15, 16,18. tall tablet #3, phone #4, subpage #5

--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -2,12 +2,16 @@
   <button class="sub-nav-trigger" aria-expanded="true" aria-haspopup="true" aria-label="Home"></button>
   
   <div class="sub-nav-product-item allowHover">
-      <a class="sub-nav-product-item-wrapper has-sub-nav" href="./">
-          <image src="https://adobe.io/content/udp/en/apis/documentcloud/dcsdk/_jcr_content/root/udpNav/image/file" alt="" class="sub-nav-icon"/>
+      <a class="sub-nav-product-item-wrapper has-sub-nav" href="">
+          <image src="assets/svg/adobe_trifoil.svg" alt="" class="sub-nav-icon"/>
           <span>Adobe Document Services</span>
       </a>
   </div>
   <ul class="sub-nav">
+
+    <li class="sub-nav-menu-item mobile-home">          
+        <a class="sub-nav-menu-label" href="./">Overview</a>
+    </li>
 
       <li class="sub-nav-menu-item">          
           <a class="sub-nav-menu-label " href="embed-sdk.html">PDF Embed API</a>
