making sure I added all files

--- a/source/_sass/font-style.scss
+++ b/source/_sass/font-style.scss
@@ -36,3 +36,8 @@
   font-weight: 900;
 }
 
+@font-face {
+  font-family: 'Adobe Clean Light';
+  src: url('../stylesheets/fonts/AdobeClean-Light.otf') format('opentype');
+  font-weight: 900;
+}
