--- a/source/_sass/slab-animate.scss
+++ b/source/_sass/slab-animate.scss
@@ -26,7 +26,13 @@
       height: 325px;     
     }
 
-    @media screen and (max-width: 801px) {
+    @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+      /* Styles */
+      height: 350px; 
+    }
+      
+
+    @media screen and (max-width: 801px) and (min-width:961px) {
       /* Mobile */
       height: 350px;     
     }
