--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -113,6 +113,7 @@ body {
   border-width: 2px;
   border-style: solid;
   border-radius: 16px;
+
   max-height: 32px;
   height: auto;
   min-width: 72px;
@@ -121,6 +122,7 @@ body {
   padding-top: 3.5px;
   font-size: 14px;
   font-weight: 700;
+  font-family: 'Adobe Clean';
   color: $grey !important;
 
   &:hover{
@@ -487,6 +489,7 @@ body {
     h5 {
       color: $grey;
       font-size: 1rem;
+      font-weight: normal;
       margin: 0;
       text-align: left;
       padding-bottom: 0.75rem;
@@ -494,6 +497,7 @@ body {
 
     li {
       color: $grey;
+      font-family: 'Adobe Clean Light';
       font-size: 1rem;
       padding-bottom: 0.5rem;
     }
@@ -677,8 +681,11 @@ section.home-card {
     }
 
     p {
-      margin: 0 0 2rem 0;
+      margin: 2rem 0 0 0;
       text-align: center;
+      &:first-of-type {
+        margin: 0;
+      }
     }
 
     .callout-item {
