fixes from the bug list global 3,4,7,8,9, Adobe-io: 3, 4, subpage-template, emdeb-sdk: 1, 4

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="spectrum--medium">
   <head>
-    <title>Adobe Developers - {{ page.title }}</title>
+    <title>SDK Developers Kit | {{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
       <meta charset="UTF-8">
