--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -2,23 +2,23 @@
   <button class="sub-nav-trigger" aria-expanded="true" aria-haspopup="true" aria-label="Home"></button>
   
   <div class="sub-nav-product-item allowHover">
-      <a class="sub-nav-product-item-wrapper has-sub-nav" href="">
-          <image src="assets/svg/adobe_trifoil.svg" alt="" class="sub-nav-icon"/>
+      <a class="sub-nav-product-item-wrapper has-sub-nav" href="./">
+          <image src="assets/svg/adobe_trifoil.svg" alt="adove trifoil icon" class="sub-nav-icon"/>
           <span>Adobe Document Services</span>
       </a>
   </div>
   <ul class="sub-nav">
 
     <li class="sub-nav-menu-item mobile-home">          
-        <a class="sub-nav-menu-label" href="./">Overview</a>
+        <a rel="canonical" class="sub-nav-menu-label" href="./">Overview</a>
     </li>
 
       <li class="sub-nav-menu-item">          
-          <a class="sub-nav-menu-label " href="embed-sdk.html">PDF Embed API</a>
+          <a rel="canonical" class="sub-nav-menu-label " href="embed-sdk.html">PDF Embed API</a>
       </li>        
       
       <li class="sub-nav-menu-item">
-        <a class="sub-nav-menu-label" href="tools-sdk.html">PDF Tools API</a>        
+        <a rel="canonical" class="sub-nav-menu-label" href="tools-sdk.html">PDF Tools API</a>        
       </li>      
         
       <li class="sub-nav-menu-item">          
