--- a/source/_sass/_subnav.scss
+++ b/source/_sass/_subnav.scss
@@ -47,8 +47,8 @@
       border:none;
 
       button.sub-nav-trigger{      
-        border:1px solid goldenrod; 
-        display:none;         
+       // border:1px solid goldenrod; 
+        //display:none;         
       }
 
       >.main-nav-items {
@@ -79,13 +79,6 @@
                 content:""; 
               }   
 
-              @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-               // -webkit-transform: rotate(-450deg);
-               // transform: rotate(-450deg); 
-              }
-                
-              
-              height: 350px; 
           }
         }
       }
@@ -102,13 +95,18 @@
       justify-content: center;     
       text-transform: uppercase;
 
+      &.allowHover:hover{
+        background: #E7E7E7;
+      }
+   
+
       .sub-nav-product-item-wrapper {
         color: #000;
         padding-right: 18px;
 
         display: flex;
         text-align: center;
-        font-weight: 700;
+        font-weight: 400;
         font-size: 14px;
         align-items: center;
         text-decoration:none;
@@ -210,14 +208,14 @@
           color: #000;
 
           padding: 0 50px;
-          font-weight: 700;
+          font-weight: 400;
           font-size: 14px;
           align-items: center;
           display: flex;
           color: #000;
         
           @media screen and (min-width: 979px) {
-            padding: 0 25px;
+            padding: 0 19px;
           }  
 
           .sub-nav-get-started-button {
