--- a/source/_sass/slab-animate.scss
+++ b/source/_sass/slab-animate.scss
@@ -1,21 +1,4 @@
 
-
-
-// .flash-dots{
-//   max-width: 1280px;
-//   position: relative;
-//   margin: 0 auto;
-//   background: url("../assets/img/slab-animate/background_circuit_2x.png");
-//   background-repeat: no-repeat;
-//   background-position: center top;
-//   background-size: contain;
-//   z-index:1;
-//    @media screen and (max-width: 640px) {
-//      /* Mobile */
-//       background: url("../assets/img/slab-animate/background_circuit_2x_mobile.png");       
-//     }
-//   }
-
   .slab-animated-item-container {
     position:relative;
     display:flex;
@@ -53,7 +36,6 @@
         background-repeat: no-repeat;
         background-position: center top;
         background-size: contain;
-        //border:1px solid #000;
 
        @media screen and (max-width: 640px) {
          /* Mobile */
@@ -61,7 +43,6 @@
         }
       }
 
-     // visibility:hidden;
      opacity:0;
     }
 
@@ -93,13 +74,11 @@
           width: 58%;
           z-index: 1;
           left: 14.5%;
-         // visibility: hidden;
          opacity:0;
           margin-top: -12px;
           @media screen and (min-width: 980px) {
             /* Desktop */
             display: block;
-            //visibility: visible;
             opacity:0;
           }
           @media screen and (max-width: 979px) {
@@ -121,7 +100,6 @@
           z-index: 2;
           top: 53%;
           left: 19.5%;
-          //visibility: hidden;
           opacity:0;
           @media screen and (min-width: 980px) {
             /* Desktop */
@@ -145,7 +123,6 @@
           z-index: 3;
           top: 13%;
           left: 45.5%;
-        // visibility: hidden;
         opacity:0;
           @media screen and (max-width: 979px) {
             /* Tablet */
@@ -172,7 +149,6 @@
           z-index: 4;
           top: 57%;
           left: 47.3%;
-      // visibility: hidden;
       opacity:0;
           @media screen and (max-width: 979px) {
             /* Tablet */
@@ -194,7 +170,6 @@
           z-index: 5;
           top: 12.5%;
           left: 64.5%;
-      //visibility: hidden;
       opacity:0;
           @media screen and (max-width: 979px) {
             /* Tablet */
@@ -217,7 +192,6 @@
           z-index: 6;
           top: 35%;
           left: 63.9%;
-      //visibility: hidden;
       opacity:0;
           @media screen and (max-width: 979px) {
             /* Tablet */
@@ -256,5 +230,28 @@ to {top:0px; opacity: 1}
     margin-bottom: 65px;
      
       //opacity:0;
+      .slab-header{
+        h1{
+          text-align:left;
+
+          @media screen and (min-width: 768px) {
+            text-align: center;
+          }
+        }
+
+        h2{
+          text-align:left;
+
+          @media screen and (min-width: 768px) {
+            text-align: center;
+          }
+
+          @media screen and (min-width: 979px) {
+            font-size: 1.375rem;
+          }
+         
+        }
+      }
+
     
   }
