committing tools code menu fix

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -771,8 +771,12 @@ section.dctsdk-work-flow {
   }
 
   .work-flow_menu ul li .work-flow-menu-copy {
-    margin-top: -2rem;
-    margin-left: 2.25rem;
+    // #GN-c margin-top: -2rem;
+    // #GN-c margin-left: 2.25rem;
+
+     //#GN
+     margin-top:  -2.51rem;
+     margin-left: 2.875rem;
   }
 
   .work-flow_menu ul li .shadow-box.dctsdk {
@@ -799,7 +803,7 @@ section.dctsdk-work-flow {
 
   .work-flow-menu-support {
     font-size: 1.0625rem;
-    margin-top: 1.625rem;
+    //GN-c margin-top: 1.625rem;
     padding-bottom: 1.875rem;
     border-bottom: 1px solid $lt-grey;
     @media screen and (min-width: 768px) {
@@ -841,10 +845,10 @@ section.dctsdk-work-flow {
   }
 
   .work-flow_menu ul li .create {
-    width: 23px;
-    height: 27px;
-    background-size: 23px;
+     background-size: 18px 21px;
     background-image: url("../assets/svg/s_createpdf_color_24.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .apply {
@@ -855,140 +859,160 @@ section.dctsdk-work-flow {
   }
 
   .work-flow_menu ul li .combine {
-    width: 26px;
-    height: 25px;
-    background-size: 26px;
+    background-size: 24px 24px;
     background-image: url("../assets/svg/s_combinefiles_color_24.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .protect {
-    width: 25px;
-    height: 27px;
-    background-size: 21px;
+    background-size: 18px 23px;
     background-image: url("../assets/svg/a12_protect.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .embed {
-    width: 35px;
-    height: 24px;
-    background-size: 28px;
+    background-size: 26px 22px;
     background-image: url("../assets/svg/menu-icons/embed.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
   .work-flow_menu ul li .annotations {
-    width: 28px;
-    height: 28px;
-    background-size: 28px;
+    background-size: 22px 24px;
     background-image: url("../assets/svg/menu-icons/annotations.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
   .work-flow_menu ul li .save {
-    width: 26px;
-    height: 25px;
-    background-size: 25px;
+    background-size: 17px 17px;
     background-image: url("../assets/svg/menu-icons/save_control.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
   .work-flow_menu ul li .collaborative {
-    width: 28px;
-    height: 24px;
-    background-size: 28px;
+    background-size: 26px 22px;
     background-image: url("../assets/svg/menu-icons/collaborative_settings.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
   .work-flow_menu ul li .analitics {
-    width: 26px;
-    height: 28px;
-    background-size: 24px;
+    background-size: 18px 21px;
     background-image: url("../assets/svg/menu-icons/analytics.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
   .work-flow_menu ul li .tool {
-    width: 28px;
-    height: 22px;
-    background-size: 28px;
+    background-size: 25px 18px;
     background-image: url("../assets/svg/menu-icons/menu_tool_options.svg");
+    background-repeat: no-repeat;
+    background-position:center center;
   }
 
     .work-flow_menu ul li .reorder {
-    width: 26px;
-    height: 22px;
-    background-size: 18px;
+    background-size: 24px 19px;
     background-image: url("../assets/svg/menu-icons/reorder_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .insert {
-    width: 23px;
-    height: 27px;
-    background-size: 22px;
+    background-size: 17px 21px;
     background-image: url("../assets/svg/menu-icons/insert_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .linearize {
-
     background-size: 17px 24px;
     background-image: url("../assets/svg/menu-icons/linearize_pdf.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .rotate {
-    width: 26px;
-    height: 24px;
-    background-size: 24px;
+    // width: 26px;
+    // height: 24px;
+    background-size: 24px 24px;
     background-image: url("../assets/svg/menu-icons/rotate_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
     .work-flow_menu ul li .reorder {
-    width: 26px;
-    height: 22px;
-    background-size: 25px;
+    // width: 26px;
+    // height: 22px;
+    background-size: 24px 19px;
     background-image: url("../assets/svg/menu-icons/reorder_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .delete {
-    width: 26px;
-    height: 23px;
-    background-size: 23px;
+    // width: 26px;
+    // height: 23px;
+    background-size: 24px 24px;
     background-image: url("../assets/svg/menu-icons/delete_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .linearize {
-    width: 23px;
-    height: 27px;
-    background-size: 23px;
+    // width: 23px;
+    // height: 27px;
+    background-size: 17px 24px;
     background-image: url("../assets/svg/menu-icons/linearize_pdf.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .replace {
-    width: 26px;
-    height: 24px;
-    background-size: 25px;
+    // width: 26px;
+    // height: 24px;
+    background-size: 23px 22px;
     background-image: url("../assets/svg/menu-icons/replace_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .compress {
-    width: 26px;
-    height: 22px;
-    background-size: 18px;
+    // width: 26px;
+    // height: 22px;
+    background-size: 23px 20px;
     background-image: url("../assets/svg/menu-icons/compress_pdf.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .recognize {
-    width: 17px;
-    height: 21px;
+    // width: 17px;
+    // height: 21px;
     background-size: 17px 21px;
     background-image: url("../assets/svg/menu-icons/recognize_text.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .export {
-    width: 26px;
-    height: 27px;
-    background-size: 25px;
+    // width: 26px;
+    // height: 27px;
+    background-size: 22px 23px;
     background-image: url("../assets/svg/menu-icons/export_page.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   .work-flow_menu ul li .icon-align {
-    margin-left: 1rem;
-    margin-top: 1rem;
+    //#GN
+    // margin-left: 1rem;
+    // margin-top: 1rem;
+    width:40px;
+    height:40px;
   }
 
   .work-flow_menu ul li .icon-align.dctsdk {
