--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -41,6 +41,50 @@
      <script type="text/javascript">
 
         $(document).ready(function(){
+          $('.card-slider-container-logos').slick({
+            dots: false,
+            mobileFirst : true,
+            infinite: false,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            // variableWidth: true,
+            // variableHeight: true,
+            responsive: [
+              {
+                breakpoint: 1440,
+                settings: {
+                  slidesToShow: 4,
+                  slidesToScroll: 1,
+                  dots: false
+                }
+              },
+              {
+                breakpoint: 768,
+                settings: {
+                  slidesToShow: 3,
+                  slidesToScroll: 1,
+                  dots: false,
+                  autoplay: true,
+                  infinite: true
+                }
+              },
+              {
+                breakpoint: 0,
+                settings: {
+                  slidesToShow: 1,
+                  slidesToScroll: 1,
+                  dots: false,
+                  autoplay: true,
+                  fade: true,
+                  infinite: true
+                }
+              }
+              // You can unslick at a given breakpoint now by adding:
+              // settings: "unslick"
+              // instead of a settings object
+            ]
+          });
           $('.card-slider-container-home').slick({
             dots: false,
             mobileFirst : true,
