--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -1,7 +1,8 @@
+
 <nav class="sub-nav-menu-wrapper">
   <button class="sub-nav-trigger" aria-expanded="true" aria-haspopup="true" aria-label="Home"></button>
   
-  <div class="sub-nav-product-item allowHover">
+  <div class="sub-nav-product-item allowHover {% if page.active == 'home' %} active{% endif %}">
       <a class="sub-nav-product-item-wrapper has-sub-nav" href="./">
           <image src="assets/svg/adobe_trifoil.svg" alt="adove trifoil icon" class="sub-nav-icon"/>
           <span>Adobe Document Services</span>
@@ -13,16 +14,16 @@
         <a rel="canonical" class="sub-nav-menu-label" href="./">Overview</a>
     </li>
 
-      <li class="sub-nav-menu-item">          
-          <a rel="canonical" class="sub-nav-menu-label " href="embed-sdk.html">PDF Embed API</a>
+      <li class="sub-nav-menu-item {% if page.active == 'embed-sdk' %} active{% endif %}">          
+          <a rel="canonical" class="sub-nav-menu-label" href="embed-sdk.html">PDF Embed API</a>
       </li>        
       
-      <li class="sub-nav-menu-item">
+      <li class="sub-nav-menu-item {% if page.active == 'tools-sdk' %} active{% endif %}">
         <a rel="canonical" class="sub-nav-menu-label" href="tools-sdk.html">PDF Tools API</a>        
       </li>      
         
-      <li class="sub-nav-menu-item">          
-          <a class="sub-nav-menu-label " href="#">Documentation</a>
+      <li class="sub-nav-menu-item  {% if page.active == 'documentation' %} active{% endif %}">          
+          <a class="sub-nav-menu-label" href="documentatinon.html">Documentation</a>
       </li>      
     
       <li class="sub-nav-menu-item no-hover">
