--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -8,17 +8,26 @@
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-global.css">
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-medium.css">
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-light.css">
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-dark.css">
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/vars/spectrum-darkest.css">
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.18.0/dist/components/tabs/index.css">
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.18.0/dist/components/tabs/colorStops/dark.css">
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.18.0/dist/components/tabs/colorStops/darkest.css">
       <link rel="stylesheet" href="https://unpkg.com/spectrum-css@1.1.5/static/latest/spectrum-full.min.css">
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css@2.x/dist/components/typography/index-vars.css">
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css-grid@0.x/dist/spectrum-css-grid.css">
       <link rel="stylesheet" href="stylesheets/style.css">
       <link rel="stylesheet" href="stylesheets/topnav.css">
-
+      <link rel="stylesheet" href="/stylesheets/prism-adobe.css">
 
       <link rel="stylesheet" href="stylesheets/main.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/slick/slick.css"/>
       <link rel="stylesheet" type="text/css" href="stylesheets/slick/slick-theme.css"/>
       <link rel="stylesheet" type="text/css" href="stylesheets/animation-lib.css"/>
+
+      <!-- Temp test of Coral Spectrum -->
+      <link rel="stylesheet" href="https://unpkg.com/@adobe/coral-spectrum@4.5.0/dist/css/coral.min.css">
+      <script src="https://unpkg.com/@adobe/coral-spectrum@4.5.0/dist/js/coral.min.js" data-coral-icons-external="js"></script>
 
     </head>
   </head>
@@ -174,5 +183,6 @@
 
   </script>
 
+  <script src="/js/prism.js"></script>
   </body>
 </html>
