--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -187,7 +187,7 @@ body {
   }
 
   h1 {
-    font-size: 1.6875rem;
+    font-size: 2.125rem;
     line-height: 2.1875rem;
     padding: 0 0 0.375rem;
     @media screen and (min-width: 768px) {
@@ -771,9 +771,16 @@ section.dctsdk-work-flow {
     margin-bottom: 3.85rem;
     width:290px;
     @media screen and (min-width: 768px) {
-   //GN-c margin-bottom: 0.625rem;
-    margin-bottom: 2.4rem;
+    //GN-c margin-bottom: 0.625rem;
+      width:224px;
+      margin-bottom: 2.4rem;
     }
+
+      @media screen and (min-width: 1440px) {
+      //GN-c margin-bottom: 0.625rem;
+        width:290px;
+        margin-bottom: 2.4rem;
+      }
   }
 
   .work-flow_menu ul li .work-flow-menu-copy {
@@ -818,10 +825,21 @@ section.dctsdk-work-flow {
     }
   }
 
-  .menu-item-info-content .work-flow-menu-support {
-    @media screen and (min-width: 768px) {
-      display: block;
+  .menu-item-info-content{
+
+    .work-flow-menu-support {
+      @media screen and (min-width: 768px) {
+        display: block;
+      }
+      
     }
+
+    .code-viewer-wrapper {
+      p{
+       display:none;
+      }
+    }
+
   }
 
   .mobile-no-button {
@@ -1036,15 +1054,45 @@ section.dctsdk-work-flow {
 
   .work-flow_code {
     display: none;
+    padding-left:0.0625rem;
+
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+    
     @media screen and (min-width: 768px) {
       display: block;
+      padding-left:0.0625rem;
+
+      
+      .code-viewer-wrapper {
+
+        .sdk-embed-wrapper {
+          display:none;
+
+          &.code-window-opened{
+            display:block;
+          }
+        }
+
+       
+
+      } 
+ 
+    }
+
+    @media screen and (min-width: 1440px) {
       padding-left: 2rem;
     }
-    .menu-item-info-content{
+
+     .menu-item-info-content{
       text-align:left;
+
+
       h4{
         text-align:left;
       }
+
       .work-flow-menu-support{
         text-align:left;
 
@@ -1055,8 +1103,12 @@ section.dctsdk-work-flow {
           font-size:1rem;
           a{text-align:left;}
         }
+
+        
       }
     }
+
+
   }
 
   .work-flow-menu-support.work-flow-support-mode-mobile {
