recommitting, somethingn went wrong

--- a/source/_includes/subnav.html
+++ b/source/_includes/subnav.html
@@ -2,7 +2,7 @@
 <nav class="sub-nav-menu-wrapper">
   <button class="sub-nav-trigger" aria-expanded="true" aria-haspopup="true" aria-label="Home"></button>
   
-  <div class="sub-nav-product-item allowHover {% if page.active == 'home' %} active{% endif %}">
+  <div class="sub-nav-product-item allowHover">
       <a class="sub-nav-product-item-wrapper has-sub-nav" href="./">
           <image src="assets/svg/adobe_trifoil.svg" alt="adove trifoil icon" class="sub-nav-icon"/>
           <span>Adobe Document Services</span>
