--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -18,7 +18,7 @@
       <link rel="stylesheet" href="https://unpkg.com/@adobe/spectrum-css-grid@0.x/dist/spectrum-css-grid.css">
       <link rel="stylesheet" href="stylesheets/style.css">
       <link rel="stylesheet" href="stylesheets/topnav.css">
-      <link rel="stylesheet" href="/stylesheets/prism-adobe.css">
+      <link rel="stylesheet" href="stylesheets/prism-adobe.css">
 
       <link rel="stylesheet" href="stylesheets/main.css">
       <link rel="stylesheet" type="text/css" href="stylesheets/slick/slick.css"/>
@@ -43,9 +43,7 @@
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" defer="defer" src="js/slick/slick.min.js"></script>
 
-    <script type="text/javascript" defer="defer" src="js/work-flow-nav.js"></script>
-    <!-- <script type="text/javascript" defer="defer" src="js/dctsdk-slider.js"></script> -->
-
+   
      <script type="text/javascript">
 
         $(document).ready(function(){
@@ -183,6 +181,10 @@
 
   </script>
 
-  <script src="/js/prism.js"></script>
+
+  <script type="text/javascript" src="js/prism.js"></script>
+  <script type="text/javascript" src="js/prism-toolbar.min.js"></script>
+<script type="text/javascript" src="js/prism-copy-to-clipboard.min.js"></script> 
+  <script type="text/javascript" defer="defer" src="js/work-flow-nav.js"></script>
   </body>
 </html>
