--- a/source/_includes/code-sample.html
+++ b/source/_includes/code-sample.html
@@ -4,9 +4,21 @@
     .sdk-embed-wrapper {
       background: var( --spectrum-global-color-gray-300 ); /* --spectrum-alias-background-color-default */
       border-radius: 4px;
+      position:relative;
     }
     .sdk-embed-wrapper coral-tablist {
       border-color: transparent;
+    }
+
+    .code-toolbar .toolbar .toolbar-item button{
+      position: absolute;
+      top: 0px;
+      background: transparent;
+      color: #fff;
+      right: 5px;
+      outline: none;
+      border: none;
+      margin-top: 7px;
     }
     
     .tab-item-copy {
@@ -36,7 +48,7 @@
 <coral-tab>.Net</coral-tab>
 <coral-tab>Java</coral-tab>                     
 
-<div class="tab-item-copy">Copy</div>
+<!-- <div class="tab-item-copy copy">Copy</div> -->
 </coral-tablist>
 <coral-panelstack>
 
@@ -122,7 +134,7 @@ result.saveAs("output/createPDFFromStaticHtmlOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>
             
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
         </coral-tablist>
         <coral-panelstack>
     
@@ -208,7 +220,7 @@ result.saveAs("output/createPDFFromStaticHtmlOutput.pdf");
         <coral-tab>.Net</coral-tab>
         <coral-tab>Java</coral-tab>
         
-        <div class="tab-item-copy">Copy</div>
+        <!-- <div class="tab-item-copy">Copy</div> -->
     </coral-tablist>
     <coral-panelstack>
 
@@ -290,7 +302,7 @@ result.saveAs("output/ocrOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -388,7 +400,7 @@ result.saveAs("output/rotatePagesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -465,7 +477,7 @@ result.saveAs("output/deletePagesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -573,7 +585,7 @@ result.saveAs("output/replacePagesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -645,7 +657,7 @@ result.saveAs("output/linearizePDFOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -716,7 +728,7 @@ result.saveAs("output/compressPDFOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -795,7 +807,7 @@ result.saveAs("output/reorderPagesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -874,7 +886,7 @@ result.saveAs("output/combineFilesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -980,7 +992,7 @@ result.saveAs("output/insertPagesOutput.pdf");
             <coral-tab>.Net</coral-tab>
             <coral-tab>Java</coral-tab>                     
          
-            <div class="tab-item-copy">Copy</div>
+            <!-- <div class="tab-item-copy">Copy</div> -->
             </coral-tablist>
             <coral-panelstack>
             <coral-panel>
@@ -1072,7 +1084,7 @@ result.saveAs("output/protectPDFOutput.pdf");
       <coral-tabview>
         <coral-tablist size="S">
           <coral-tab>HTML</coral-tab>
-          <div class="tab-item-copy">Copy</div>
+          <!-- <div class="tab-item-copy">Copy</div> -->
         </coral-tablist>
         <coral-panelstack>
           <coral-panel>
