--- a/source/_sass/_subnav.scss
+++ b/source/_sass/_subnav.scss
@@ -97,11 +97,13 @@
       text-transform: uppercase;
 
       &.allowHover:hover{
-        background: #E7E7E7;
+       // background: #E7E7E7;
       }
 
       &.active{
-        background: #E7E7E7;
+        @media screen and (min-width: 768px){
+         background: #E7E7E7;
+        }
       }
    
 
@@ -172,7 +174,7 @@
 
       .mobile-home{
         
-        @media screen and (min-width: 790px){
+        @media screen and (min-width: 1440px){
           display: none;
         }
       }      
@@ -206,7 +208,9 @@
         }
         
         &.active{
+          @media screen and (min-width: 768px) {
           background: #E7E7E7;
+          }
         }
 
         .sub-nav-menu-label {
