--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -21,6 +21,8 @@ body {
 
 .main {
   font-family: 'Adobe Clean';
+  overflow-x: hidden;
+
   a {
     text-decoration: none;
     color: $blue;
@@ -33,7 +35,7 @@ body {
     line-height: 2.75rem;
     margin: 0;
     padding: 1.5rem 0 0.375rem;
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) {      
       text-align: center;
     }
 
@@ -409,7 +411,7 @@ body {
             margin: 0.1rem;
             &:first-of-type {
               margin: 0 0.1rem 0 0;
-              min-width: 72px;
+              min-width: 76px;
             }
           }
         }
@@ -655,8 +657,12 @@ section.slab {
   // background-repeat: no-repeat;
   // background-position: center top;
   color: $white;
-  margin: 0 0 4.375rem;
-  padding: 1.125rem 2.75rem 8.75rem;
+  margin: 0 0 4.375rem;  
+  padding: 1.125rem 0px 8.75rem;
+
+  @media screen and (min-width: 1440px) {
+    padding: 1.125rem 2.75rem 8.75rem;
+  }
 
   h1,
   h2 {
@@ -734,6 +740,7 @@ section.home-card {
   }
 }
 /* home cards end */
+
 /* Work flow */
 section.dctsdk-work-flow {
   @media screen and (min-width: 768px) {
@@ -1060,7 +1067,7 @@ section.dctsdk-work-flow {
       display: none;
     }
     
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 1440px) {
       display: block;
       padding-left:0.0625rem;
 
@@ -1082,7 +1089,7 @@ section.dctsdk-work-flow {
     }
 
     @media screen and (min-width: 1440px) {
-      padding-left: 2rem;
+      //padding-left: 2rem;
     }
 
      .menu-item-info-content{
@@ -1117,7 +1124,12 @@ section.dctsdk-work-flow {
 
   .work-flow-support-mode-mobile.open {
     margin-top: 2.125rem;
-    display: block;
+
+    @media screen and (min-width: 1440px) {
+      //padding-left: 2rem;
+      display: block;
+    }
+    
 
 
     .button-link {
