Rounded corner on hover fix

--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -818,6 +818,7 @@ section.dctsdk-work-flow {
     @media screen and (min-width: 768px) {
       background: $white;
       box-shadow: 0 3px 16px #46303029;
+      border-radius: 6px;
       //#GN-c padding: 1.25rem 2rem;
       padding:0.8125rem 1rem;
     }
